--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.18.0/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/speech-commands@1.4.0/dist/speech-commands.min.js"></script>
 <!DOCTYPE html>
 <html lang="en">
   <head>
